# imagekeeper

./: .travis.yml  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
etc/imagekeeper/: .imagekeeper.conf.swp  backends.json.sample  imagekeeper-config-generator.conf  imagekeeper.conf
imagekeeper/: .cfg.py.swp  exception.py  importutils.py  loadables.py  pluginloader.py  version.py
imagekeeper/backend/: manager.py  parser.py
imagekeeper/backend/connectors/: __init__.py
imagekeeper/backends/: base.py  openstack.py
imagekeeper/cmd/: sync.py
imagekeeper/common/: config.py  exception.py  utils.py
imagekeeper/image/: manager.py
imagekeeper/image/formats/: __init__.py  helixnebula.py
imagekeeper/tests/: base.py  test_exception.py
imagekeeper/tests/backend/: test_manager.py
imagekeeper/tests/backends/: test_openstack.py
imagekeeper/tests/common/: test_utils.py
