[metadata]
name = imagekeeper
author = Jerome Pansanel
author-email = jerome.pansanel@iphc.cnrs.fr
summary = Multi-cloud image manager
description-file =
    README.rst
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
data_files = 
    etc/imagekeeper = etc/imagekeeper/*
packages = 
    imagekeeper

[entry_points]
console_scripts =
    imagekeeper-sync = imagekeeper.cmd.sync:main

